--- a/UI dev/Z-Project SCSS/index.html
+++ b/UI dev/Z-Project SCSS/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
     </head>
     <body>
-        <div class="header">
+        <header class="header">
             <div class="header__logo-box">
                 <img src="./resource/pepsilogo.png" alt="pepsilogo" class="header__logo" />
             </div>
@@ -18,6 +18,108 @@
                     Discover our Tours
                 </a>
             </div>
-        </div>
+        </header>
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exciting tour for adventurous peoples
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">You are going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure repudiandae vel sit laboriosam distinctio vitae cum quo ea, amet modi error nam? Quos perferendis consequuntur voluptas dolor distinctio nam harum!
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">You are going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure repudiandae vel sit laboriosam distinctio vitae cum quo ea, amet modi error nam? Quos perferendis consequuntur voluptas dolor distinctio nam harum!
+                        </p>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/90/One_Piece%2C_Volume_61_Cover_%28Japanese%29.jpg/220px-One_Piece%2C_Volume_61_Cover_%28Japanese%29.jpg" alt="photo1" class="composition__photo composition__photo--p1">
+                            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/90/One_Piece%2C_Volume_61_Cover_%28Japanese%29.jpg/220px-One_Piece%2C_Volume_61_Cover_%28Japanese%29.jpg" alt="photo2" class="composition__photo composition__photo--p2">
+                            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/90/One_Piece%2C_Volume_61_Cover_%28Japanese%29.jpg/220px-One_Piece%2C_Volume_61_Cover_%28Japanese%29.jpg" alt="photo3" class="composition__photo composition__photo--p3">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+
+        </footer>
+        <!-- <div class="grid-test">
+            <div class="row">
+                <div class="col-1-of-2">
+                    col-1-of-2
+                </div>
+                <div class="col-1-of-2">
+                    col-1-of-2
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+                <div class="col-2-of-3">
+                    col-2-of-3
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-2-of-4">
+                    col-2-of-4
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-3-of-4">
+                    col-3-of-4
+                </div>
+            </div>
+
+
+        </div> -->
     </body>
 </html>
